--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Your awesome title
+title: Cat With No Name
 email: yochannah@gmail.com
 description: > # Icecream and banananas
 baseurl: "" # the subpath of your site, e.g. /blog
